--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
             </section>
           </div>
         </main>
-        <footer>
-
+        <footer class="bg-dark text-center text-white py-3">
+          <h4>Penguin fashion bootstrap</h4>
+          <p><small>All &copy; right reserved by H.M Masud 2022</small></p>
         </footer>
     </div>
 
