--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             printing and typesetting industry.</p>
                             <div class="d-flex justify-content-between">
                               <h3 class="text-warning">$234</h3>
-                              <button style="background-color: #A4BC46;" class="btn"><img  width="24" src="icons/shopping-cart 1.png" alt=""> Buy Now</button>
+                              <button style="background-color: #A4BC46;" class="btn text-white"><img  width="24" src="icons/shopping-cart 1.png" alt=""> Buy Now</button>
                           </div>
                     </div>
                   </div>
@@ -155,7 +155,7 @@
                         printing and typesetting industry.</p>
                         <div class="d-flex justify-content-between">
                             <h3 class="text-warning">$234</h3>
-                            <button style="background-color: #A4BC46;" class="btn"><img  width="24" src="icons/shopping-cart 1.png" alt=""> Buy Now</button>
+                            <button style="background-color: #A4BC46;" class="btn text-white"><img  width="24" src="icons/shopping-cart 1.png" alt=""> Buy Now</button>
                         </div>
                     </div>
                   </div>
